# spoonacular-api-clients

./: .gitignore  LICENSE  README.md  build.ps1  java-config.json  package-lock.json  package.json  spoonacular-openapi-3.json  tsconfig.json
_docmatch/: .gitignore  README.md  pyproject.toml
_docmatch/src/: docmatch.py
android/: README.md  build.gradle  git_push.sh  pom.xml  settings.gradle
angular/: README.md  configuration.ts  git_push.sh  package.json
clojure/: git_push.sh  project.clj
cpp/: README.md
cpp/client/: CMakeLists.txt  OAIAddMealPlanTemplate_200_response.cpp  OAIAddMealPlanTemplate_200_response.h  OAIAddMealPlanTemplate_200_response_items_inner.cpp  OAIAddMealPlanTemplate_200_response_items_inner.h  OAIAddMealPlanTemplate_200_response_items_inner_value.cpp  OAIAddMealPlanTemplate_200_response_items_inner_value.h  OAIAddToMealPlan_request.cpp  OAIAddToMealPlan_request.h  OAIAddToMealPlan_request_1.cpp  OAIAddToMealPlan_request_1.h  OAIAddToMealPlan_request_1_value.cpp  OAIAddToMealPlan_request_1_value.h  OAIAddToMealPlan_request_1_value_ingredients_inner.cpp  OAIAddToMealPlan_request_1_value_ingredients_inner.h  OAIAddToMealPlan_request_value.cpp  OAIAddToMealPlan_request_value.h  OAIAddToMealPlan_request_value_ingredients_inner.cpp  OAIAddToMealPlan_request_value_ingredients_inner.h  OAIAddToShoppingList_request.cpp  OAIAddToShoppingList_request.h  OAIAnalyzeARecipeSearchQuery_200_response.cpp  OAIAnalyzeARecipeSearchQuery_200_response.h  OAIAnalyzeARecipeSearchQuery_200_response_dishes_inner.cpp  OAIAnalyzeARecipeSearchQuery_200_response_dishes_inner.h  OAIAnalyzeARecipeSearchQuery_200_response_ingredients_inner.cpp  OAIAnalyzeARecipeSearchQuery_200_response_ingredients_inner.h  OAIAnalyzeRecipeInstructions_200_response.cpp  OAIAnalyzeRecipeInstructions_200_response.h  OAIAnalyzeRecipeInstructions_200_response_ingredients_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_ingredients_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner_ingredients_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner_ingredients_inner.h  OAIAnalyzeRecipe_request.cpp  OAIAnalyzeRecipe_request.h  OAIAnalyzeRecipe_request_1.cpp  (+367 more)
cpp/client/com.spoonacular/: OAIDefaultApi.cpp  OAIDefaultApi.h  OAIIngredientsApi.cpp  OAIIngredientsApi.h  OAIMealPlanningApi.cpp  OAIMealPlanningApi.h  OAIMenuItemsApi.cpp  OAIMenuItemsApi.h  OAIMiscApi.cpp  OAIMiscApi.h  OAIProductsApi.cpp  OAIProductsApi.h  OAIRecipesApi.cpp  OAIRecipesApi.h  OAIWineApi.cpp  OAIWineApi.h
cpp/client/com.spoonacular.client.model/: OAIAddMealPlanTemplate_200_response.cpp  OAIAddMealPlanTemplate_200_response.h  OAIAddMealPlanTemplate_200_response_items_inner.cpp  OAIAddMealPlanTemplate_200_response_items_inner.h  OAIAddMealPlanTemplate_200_response_items_inner_value.cpp  OAIAddMealPlanTemplate_200_response_items_inner_value.h  OAIAddToMealPlan_request.cpp  OAIAddToMealPlan_request.h  OAIAddToMealPlan_request_1.cpp  OAIAddToMealPlan_request_1.h  OAIAddToMealPlan_request_1_value.cpp  OAIAddToMealPlan_request_1_value.h  OAIAddToMealPlan_request_1_value_ingredients_inner.cpp  OAIAddToMealPlan_request_1_value_ingredients_inner.h  OAIAddToShoppingList_request.cpp  OAIAddToShoppingList_request.h  OAIAnalyzeARecipeSearchQuery_200_response.cpp  OAIAnalyzeARecipeSearchQuery_200_response.h  OAIAnalyzeARecipeSearchQuery_200_response_dishes_inner.cpp  OAIAnalyzeARecipeSearchQuery_200_response_dishes_inner.h  OAIAnalyzeARecipeSearchQuery_200_response_ingredients_inner.cpp  OAIAnalyzeARecipeSearchQuery_200_response_ingredients_inner.h  OAIAnalyzeRecipeInstructions_200_response.cpp  OAIAnalyzeRecipeInstructions_200_response.h  OAIAnalyzeRecipeInstructions_200_response_ingredients_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_ingredients_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner.h  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner_ingredients_inner.cpp  OAIAnalyzeRecipeInstructions_200_response_parsedInstructions_inner_steps_inner_ingredients_inner.h  OAIAnalyzeRecipe_request.cpp  OAIAnalyzeRecipe_request.h  OAIAnalyzeRecipe_request_1.cpp  OAIAnalyzeRecipe_request_1.h  OAIAutocompleteIngredientSearch_200_response_inner.cpp  OAIAutocompleteIngredientSearch_200_response_inner.h  OAIAutocompleteMenuItemSearch_200_response.cpp  OAIAutocompleteMenuItemSearch_200_response.h  (+586 more)
csharp/: README.md  appveyor.yml  git_push.sh  spoonacular.sln
dart/: README.md  git_push.sh
elixir/: README.md  mix.exs
elm/: README.md
erlang/: rebar.config
go/: README.md  api_default.go  api_ingredients.go  api_meal_planning.go  api_menu_items.go  api_misc.go  api_products.go  api_recipes.go  api_wine.go  client.go  configuration.go  git_push.sh  go.mod  model__food_ingredients_map_products.go  model__recipes_find_by_ingredients_missed_ingredients.go  model__recipes_parse_ingredients_estimated_cost.go  model__recipes_parse_ingredients_nutrition.go  model__recipes_parse_ingredients_nutrition_caloric_breakdown.go  model__recipes_parse_ingredients_nutrition_nutrients.go  model__recipes_parse_ingredients_nutrition_properties.go  model__recipes_parse_ingredients_nutrition_weight_per_serving.go  model_add_meal_plan_template_200_response.go  model_add_meal_plan_template_200_response_items_inner.go  model_add_meal_plan_template_200_response_items_inner_value.go  model_add_to_meal_plan_request.go  model_add_to_meal_plan_request_1.go  model_add_to_meal_plan_request_1_value.go  (+330 more)
(+17149 files in other folders)
