[project]
name = "docmatch"
version = "0.1.0"
description = "Matches the spoonacular API docs to the OpenAPI spec"
authors = [
    {name = "Val Packett", email = "val@packett.cool"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "genson>=1.2.2",
    "json-repair>=0.17.1",
    "jsonref>=1.1.0",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
